--- a/views/author/show.handlebars
+++ b/views/author/show.handlebars
@@ -2,3 +2,5 @@
 <p>Name: {{author.name}} </p>
 <p>Bio: {{author.bio}}</p>
 <p>Gender: {{author.bio}}</p>
+
+<a href="/authors/update/{{author.id}}">Update Author</a>
